rtl alignment fix
rtl alignment fix

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/custom-common.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/custom-common.scss
@@ -372,6 +372,23 @@ img {
   }
 }
 
+*[lang="ar"] {
+  *[dir="rtl"] {
+    .btn-col-2 {
+      .cmp-container {
+        @media (min-width: 768px) {
+          >.button {
+            &:first-child {
+              margin-left: toRem(24);
+              margin-right: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 .img-responsive {
   display: block;
   height: auto;
